--- a/assets/css/delorean.css
+++ b/assets/css/delorean.css
@@ -101,7 +101,7 @@ section .inner{
     background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
     border-radius: 0.5em 0.5em 0.5em 0.5em;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    margin: 2em;
+    margin: 2em 0;
     padding: 1em;	
 }
 	.qnav span{
@@ -131,12 +131,24 @@ section .inner{
     width: 99%;
     min-height: 100px;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
     min-width: 100%;
-    border: .5em solid #aaa;
+    border: .5em solid #fff;
 }
+	.timeline:after{
+		box-shadow: 0 -.25em .75em rgba(0, 0, 0, 0.15) inset;
+		content: "";
+		display: block;
+		height: 100%;
+		left: 0;
+		pointer-events: none;
+		position: absolute;
+		top: 0;
+		width: 100%;
+		z-index: 20;
+	}
 	.timeline .scrubber{
-		cursor: move;
+		/* cursor: move; */
 		height: 100%;
 		left: 0;
 		position: absolute;
@@ -153,7 +165,9 @@ section .inner{
 		border-left: 1px solid #DDDDDD;
 		float: left;
 		height: 100%;
-		width: 10%;
+		width: 1%;
+		position: relative;
+		z-index: 0;
 		-webkit-transition: all .25s linear;
 		-moz-transition: all .25s linear;
 		-ms-transition: all .25s linear;
@@ -161,10 +175,47 @@ section .inner{
 		transition: all .25s linear;
 		
 	}
+		.timeline .gap:first-child{
+			border-left: none;
+		}
 		.timeline .gap:nth-child(2n){
 			background: rgba(200,200,200,.1);
 		}
-
+	
+	.timeline .pnt{
+		background: none repeat scroll 0 0 rgba(100, 100, 100, 0.15);
+		border: 1px solid #CCCCCC;
+		border-radius: 0.25em 0.25em 0.25em 0.25em;
+		box-shadow: 0 4px 8px rgba(255, 255, 255, 0.75) inset, 0 -4px 8px rgba(150,150,150, 0.1) inset;
+		color: #888888;
+		display: block;
+		font-size: 0.75em;
+		font-weight: 500;
+		margin: 1em auto;
+		padding: 0.25em;
+		text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);
+		width: 80%;
+		position: relative;
+		z-index: 100;
+		cursor: pointer;
+		text-align: center;
+		white-space: nowrap;
+		-webkit-transition: all .25s linear;
+		-moz-transition: all .25s linear;
+		-ms-transition: all .25s linear;
+		-o-transition: all .25s linear;
+		transition: all .25s linear;
+	}
+		.timeline .pnt:hover{
+			background: rgba(105,142,185,.15);
+			color: #333
+		}
+		.timeline .pnt.active{
+			background: rgba(105,142,185,.75);
+			color: #fff;
+			text-shadow: -1px -1px 0 rgba(0,0,0,.15);
+			box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25), -1px -1px 0 rgba(0, 0, 0, 0.2) inset, 0 4px 8px rgba(255, 255, 255, 0.75) inset, 0 -4px 8px rgba(0, 0, 0, 0.1) inset;
+		}
 
 
 
