--- a/assets/css/ptrns.css
+++ b/assets/css/ptrns.css
@@ -67,7 +67,7 @@
 	.tmpl_1 h1{
 		background: none repeat scroll 0 0 rgba(255, 255, 255, 0.25);
 		box-shadow: 0 0 3em rgba(255, 255, 255, 0.75) inset, 0 0 0.5em rgba(0, 0, 0, 0.15);
-		margin: 0;
+		margin: 0 0 .5em;
 		padding: 2em 0.5em 8em;
 		position: absolute;
 		right: 0;
@@ -79,7 +79,7 @@
 	.tmpl_1 .copy{
 		right: 3%;
 		position: absolute;
-		top: 9em;
+		top: 10em;
 		width: 55%;
 		z-index: 10;
 	}
