--- a/assets/css/delorean.css
+++ b/assets/css/delorean.css
@@ -181,6 +181,35 @@ section .inner{
 		.timeline .gap:nth-child(2n){
 			background: rgba(200,200,200,.1);
 		}
+	.gap .dte{
+		-webkit-transform: rotate(-90deg);
+		-moz-transform: rotate(-90deg);
+		-ms-transform: rotate(-90deg);
+		-o-transform: rotate(-90deg);
+		transform: rotate(-90deg);
+		background: none repeat scroll 0 0 rgba(100, 100, 100, 0.15);
+		border-radius: 0 0 0.5em 0;
+		bottom: 20%;
+		color: #888888;
+		display: block;
+		font-size: 0.75em;
+		font-weight: 500;
+		left: 0;
+		line-height: 0;
+		margin: 0 0 -10px -14px;
+		padding: 10px;
+		position: absolute;	
+		opacity: .5;
+		-webkit-transition: all .25s linear;
+		-moz-transition: all .25s linear;
+		-ms-transition: all .25s linear;
+		-o-transition: all .25s linear;
+		transition: all .25s linear;
+		
+	}
+	.gap:hover .dte{
+		opacity: 1
+	}
 	
 	.timeline .pnt{
 		background: none repeat scroll 0 0 rgba(100, 100, 100, 0.15);
@@ -218,6 +247,73 @@ section .inner{
 		}
 
 
+.zoom{
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
+    border-radius: 0.5em 0.5em 0.5em 0.5em;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+    margin: -40px 20px 0;
+    overflow: hidden;
+    padding: 20px 5px 10px;
+    width: 130px;
+    float: right;
+}
+.controls span{
+		background: none repeat scroll 0 0 rgba(100, 100, 100, 0.15);
+		border: 1px solid #CCCCCC;
+		border-radius: 0.25em 0.25em 0.25em 0.25em;
+		box-shadow: 0 4px 8px rgba(255, 255, 255, 0.75) inset, 0 -4px 8px rgba(150,150,150, 0.1) inset;
+		color: #888888;
+		display: block;
+		float: left;
+		font-weight: 700;
+		padding: 0.25em;
+		text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5);
+		width: 40px;
+		height: 25px;
+		position: relative;
+		z-index: 100;
+		cursor: pointer;
+		text-align: center;
+		white-space: nowrap;
+		margin: 0 5px;
+		-webkit-transition: all .25s linear;
+		-moz-transition: all .25s linear;
+		-ms-transition: all .25s linear;
+		-o-transition: all .25s linear;
+		transition: all .25s linear;
+}
+		.controls span:hover{
+			background: rgba(105,142,185,.75);
+			color: #fff;
+			text-shadow: -1px -1px 0 rgba(0,0,0,.15);
+			box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25), -1px -1px 0 rgba(0, 0, 0, 0.2) inset, 0 4px 8px rgba(255, 255, 255, 0.75) inset, 0 -4px 8px rgba(0, 0, 0, 0.1) inset;
+		}
+		.zoom .in:after{
+			content: '+';
+		}
+		.zoom .out:after{
+			content: '-';
+		}
 
-
-
+.pan{
+	    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
+    border-radius: 0.5em 0.5em 0.5em 0.5em;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+    margin: -40px 20px 0;
+    overflow: hidden;
+    padding: 20px 5px 10px;
+    width: 130px;
+    float: left;
+}
+	.pan span{
+		
+	}
+	.pan .lft{
+		
+	}
+	.pan .lft:after{
+		content: '<';
+	}
+	.pan .rgt:after{
+		content: '>';
+	}
