--- a/assets/css/ptrns.css
+++ b/assets/css/ptrns.css
@@ -65,26 +65,37 @@
 		z-index: 20;
 	}
 	.tmpl_1 h1{
-		background: none repeat scroll 0 0 rgba(255, 255, 255, 0.25);
-		box-shadow: 0 0 3em rgba(255, 255, 255, 0.75) inset, 0 0 0.5em rgba(0, 0, 0, 0.15);
-		margin: 0 0 .5em;
-		padding: 2em 0.5em 8em;
+		color: #BFAC8F;
+		font-family: georgia,serif;
+		font-size: 68px;
+		margin: 0 0 0.5em;
+		padding: 0.5em;
 		position: absolute;
 		right: 0;
 		top: 0;
-		width: 55%;
+		width: 43%;
 		z-index: 10;
-		color: #666;
 	}
 	.tmpl_1 .copy{
-		right: 3%;
+		color: #BFAC8F;
+		font-family: georgia,serif;
 		position: absolute;
+		right: 3%;
 		top: 10em;
-		width: 55%;
+		width: 37%;
 		z-index: 10;
 	}
+		.tmpl_1 .copy h2{
+			color: #BFAC8F;
+			font-family: georgia,serif;
+			margin-bottom: 0.25em;
+			
+		}
 		.tmpl_1 .copy p{
-			color: #666;
+			color: #BFAC8F;
+			font-family: georgia,serif;
+			margin: 0;
+			font-size: 1em;
 		}
 /*
 	.tmpl_1 .imgholder{
@@ -103,10 +114,10 @@
 .tmpl_2{
 }
 	.tmpl_2 .copy{
-		background: none repeat scroll 0 0 rgba(105, 142, 185, 0.5);
+		background: none repeat scroll 0 0 rgba(255, 255, 255, 0.85);
 		bottom: 0;
 		box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.5), 0 2px 5px rgba(255, 255, 255, 0.15) inset, 0 -6px 9px rgba(0, 0, 0, 0.25) inset;
-		color: #FFFFFF;
+		color: #303030;
 		padding: 2% 5%;
 		position: absolute;
 		width: 100%;
